Fix the layout bug of login and registration interface

--- a/netdisk/static/account/css/login.css
+++ b/netdisk/static/account/css/login.css
@@ -6,7 +6,7 @@
     border-radius: 30px;
     background-color: white;
     box-shadow: 5px 5px 2px rgba(32, 54, 67, 0.35);
-
+    min-width: 300px;
 }
 
 h1
